Added medInria plugin first version

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,29 +1,7 @@
-# Check the CMake version
-CMAKE_MINIMUM_REQUIRED ( VERSION 2.6 )
-IF ( COMMAND CMAKE_POLICY )
-    CMAKE_POLICY( SET CMP0003 NEW )
-ENDIF ( COMMAND CMAKE_POLICY )
-
-
-# Project name
-PROJECT ( LCC_LOG_DEMONS )
-
-# Set runtime, library, and archive output directories
-SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${PROJECT_BINARY_DIR}/bin  CACHE PATH "Single Directory for all executables"       )
-SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${PROJECT_BINARY_DIR}/lib  CACHE PATH "Single Directory for all dynamic libraries" )
-SET ( CMAKE_ARCHIVE_OUTPUT_DIRECTORY  ${PROJECT_BINARY_DIR}/lib  CACHE PATH "Single Directory for all static libraries"  )
-MESSAGE ( STATUS "CMAKE_RUNTIME_OUTPUT_DIRECTORY: ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}" )
-MESSAGE ( STATUS "CMAKE_LIBRARY_OUTPUT_DIRECTORY: ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}" )
-MESSAGE ( STATUS "CMAKE_ARCHIVE_OUTPUT_DIRECTORY: ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}" )
-
-
 # Specify the include directories
-INCLUDE_DIRECTORIES (
-    ${PROJECT_SOURCE_DIR}/TCLAP
-    ${PROJECT_SOURCE_DIR}/RegistrationProgrammingInterface
-    ${PROJECT_SOURCE_DIR}/LogDemons
-    ${PROJECT_SOURCE_DIR}/LCClogDemons
-    ${PROJECT_SOURCE_DIR}/SVFLogJacobian
+INCLUDE_DIRECTORIES (LogDemons
+                     LCClogDemons
+                     SVFLogJacobian
 )
 
 
@@ -32,9 +10,19 @@ LINK_DIRECTORIES ( ${PROJECT_BINARY_DIR}/lib )
 
 set(BUILD_SHARED_LIBS FALSE)
 
+if (LOG_DEMONS_BUILD_PLUGIN)
+  find_package(medInria-superProject REQUIRED)
+  add_subdirectory(medInriaPlugin)
+endif()
+
+# If medInria plugin is enabled, this will retrieve the superproject packages
+find_package(ITK REQUIRED)
+include(${ITK_USE_FILE})
+
+find_package(RPI REQUIRED)
+include(${RPI_USE_FILE})
 
 # Add sub-directories
+#ADD_SUBDIRECTORY( LogDemons )
 ADD_SUBDIRECTORY( LCClogDemons )
-#ADD_SUBDIRECTORY( SpatioTemporalLocalLogDemons            )
-#ADD_SUBDIRECTORY( RegistrationProgrammingInterface               )
 ADD_SUBDIRECTORY( SVFLogJacobian )
