Make building medInria plugin OFF by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ MESSAGE ( STATUS "CMAKE_RUNTIME_OUTPUT_DIRECTORY: ${CMAKE_RUNTIME_OUTPUT_DIRECTO
 MESSAGE ( STATUS "CMAKE_LIBRARY_OUTPUT_DIRECTORY: ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}" )
 MESSAGE ( STATUS "CMAKE_ARCHIVE_OUTPUT_DIRECTORY: ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}" )
 
-option(LOG_DEMONS_BUILD_PLUGIN "Create LogDemons medInria plugin")
+option(LOG_DEMONS_BUILD_PLUGIN "Create LogDemons medInria plugin" OFF)
 #TODO option(LOG_DEMONS_ENABLE_FFTW "Add FFTW support")
 
 include_directories(${PROJECT_SOURCE_DIR}/dependencies/TCLAP)
