--- a/cmake/LogDemonsConfig.cmake.in
+++ b/cmake/LogDemonsConfig.cmake.in
@@ -12,7 +12,7 @@ set(LogDemons_VERSION        "1.1.0")
 set(LogDemons_INCLUDE_DIRS @PROJECT_SOURCE_DIR@/src/LCClogDemons @PROJECT_SOURCE_DIR@/src/LogDemons @PROJECT_SOURCE_DIR@/src/SVFLogJacobian)
 set(LogDemons_LIBRARY_DIRS @CMAKE_ARCHIVE_OUTPUT_DIRECTORY@ @CMAKE_ARCHIVE_OUTPUT_DIRECTORY@/Debug @CMAKE_ARCHIVE_OUTPUT_DIRECTORY@/Release @CMAKE_ARCHIVE_OUTPUT_DIRECTORY@/MinSizeRel @CMAKE_ARCHIVE_OUTPUT_DIRECTORY@/RelWithDebInfo)
 set(LogDemons_CMAKE_DIRS   @PROJECT_SOURCE_DIR@/cmake)
-set(LogDemons_USE_FILE     @LogDemons_BINARY_DIR@/LCCLogDemonsUse.cmake)
+set(LogDemons_USE_FILE     @LogDemons_BINARY_DIR@/LogDemonsUse.cmake)
 
 # ################################
 # LIBRARIES
